--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
+# Streamlit secrets
+.streamlit/secrets.toml
+
 # Environment variables
 .env
-.streamlit/secrets.toml
 
 # Python cache
 __pycache__/
